# serializer version: 1
# name: test_cte_ok[cte_multi]
  '''
  start
    query_statement
      query_expr
        bigquery__cte
          bigquery__cte_item
            bigquery__ident	table1
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
                        as_alias
                          bigquery__ident	col1
            bigquery__cte_item
              bigquery__ident	table2
              subquery
                query_expr
                  select
                    select_list
                      bigquery__select_item
                        bigquery__select_expr
                          column_expr
                            bigquery__literal
                              bigquery__integer_literal	2
                          as_alias
                            bigquery__ident	col2
          query_expr
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      bigquery__ident	col1
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      bigquery__ident	col2
              bigquery__select_from
                from_clause
                  from_clause
                    bigquery__from_item_table
                      bigquery__path_expression
                        bigquery__ident	table1
                  bigquery__from_item_table
                    bigquery__path_expression
                      bigquery__ident	table2
  
  '''
# ---
# name: test_cte_ok[cte_single]
  '''
  start
    query_statement
      query_expr
        bigquery__cte
          bigquery__cte_item
            bigquery__ident	table1
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        column_expr
                          bigquery__literal
                            bigquery__integer_literal	1
                        as_alias
                          bigquery__ident	col1
          query_expr
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      bigquery__ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_struct]
  '''
  start
    query_statement
      query_expr
        select
          bigquery__select_shape	STRUCT
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_as_value]
  '''
  start
    query_statement
      query_expr
        select
          bigquery__select_shape	VALUE
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_from_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
                as_alias
                  bigquery__ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
                as_alias
                  bigquery__ident	alias1
  
  '''
# ---
# name: test_select_ok[select_from_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column2
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table2
  
  '''
# ---
# name: test_select_ok[select_from_time_travel]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
                bigquery__time_travel
                  column_expr
                    bigquery__literal
                      bigquery__string_literal	'1970-01-01'
  
  '''
# ---
# name: test_select_ok[select_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_star
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  subquery
                    query_expr
                      select
                        select_list
                          bigquery__select_item
                            bigquery__select_expr
                              column_expr
                                bigquery__literal
                                  bigquery__integer_literal	1
                as_alias
                  bigquery__ident	column2
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
                  as_alias
                    bigquery__ident	alias1
              bigquery__from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        bigquery__select_item
                          bigquery__select_expr
                            column_expr
                              bigquery__ident	column7
                      bigquery__select_from
                        from_clause
                          bigquery__from_item_table
                            bigquery__path_expression
                              bigquery__ident	table2
                as_alias
                  bigquery__ident	alias2
  
  '''
# ---
# name: test_select_ok[select_list_alias_explicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
                as_alias
                  bigquery__ident	alias1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_alias_implicit]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
                as_alias
                  bigquery__ident	alias1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column2
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_list_trailing_comma]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table2
  
  '''
# ---
# name: test_select_ok[select_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__literal
                    bigquery__integer_literal	1
  
  '''
# ---
# name: test_select_ok[select_star]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_star
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_dot_star
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_select_ok[select_star_scoped_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_dot_star
                column_expr
                  column_expr
                    bigquery__ident	column1
                  bigquery__ident	column2
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        bigquery__select_item
                          bigquery__select_expr
                            column_expr
                              bigquery__ident	column1
                      bigquery__select_from
                        from_clause
                          bigquery__from_item_table
                            bigquery__path_expression
                              bigquery__ident	table1
  
  '''
# ---
# name: test_subquery_ok[select_from_subquery_aliased]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_subquery
                subquery
                  query_expr
                    select
                      select_list
                        bigquery__select_item
                          bigquery__select_expr
                            column_expr
                              bigquery__ident	column1
                      bigquery__select_from
                        from_clause
                          bigquery__from_item_table
                            bigquery__path_expression
                              bigquery__ident	table1
                as_alias
                  bigquery__ident	table2
  
  '''
# ---
# name: test_subquery_ok[subquery]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      bigquery__literal
                        bigquery__integer_literal	1
  
  '''
# ---
# name: test_subquery_ok[subquery_nested]
  '''
  start
    query_statement
      query_expr
        subquery
          query_expr
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      subquery
                        query_expr
                          select
                            select_list
                              bigquery__select_item
                                bigquery__select_expr
                                  column_expr
                                    subquery
                                      query_expr
                                        select
                                          select_list
                                            bigquery__select_item
                                              bigquery__select_expr
                                                column_expr
                                                  bigquery__literal
                                                    bigquery__integer_literal	1
  
  '''
# ---
# name: test_unnest_ok[unnest_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_single_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
                    as_alias
                      bigquery__ident	alias1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_alias_with_offset_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
                    as_alias
                      bigquery__ident	alias1
                  bigquery__unnest_expression_with_offset
                    as_alias
                      bigquery__ident	alias2
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
                  bigquery__unnest_expression_with_offset
  
  '''
# ---
# name: test_unnest_ok[unnest_trailing_with_offset_alias]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                column_expr
                  bigquery__ident	column1
          bigquery__select_from
            from_clause
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
              bigquery__from_item
                bigquery__from_item_unnest
                  bigquery__unnest_expression
                    column_expr
                      bigquery__ident	array1
                  bigquery__unnest_expression_with_offset
                    as_alias
                      bigquery__ident	alias1
  
  '''
# ---
